31-b/service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-pod
  labels:
    app: service-pod
spec:
  containers:
  - name: service-pod
    image: kubernetesway/service:v1
    ports:
    - containerPort: 8080
