31-b/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  labels:
    app: web-pod
spec:
  containers:
  - name: web-pod
    image: kubernetesway/web:v1
    ports:
    - containerPort: 80
