31-b/web-egress-to-service.yaml.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-egress-to-service
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web-pod
  policyTypes:
  
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: service-pod
